--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mobile-calendar-simple",
   "version": "2.0.0",
-  "description": "vue开发，支持日历选择，支持酒店入住-离开范围选择，同时可以自定义主题色（兼容uniApp）",
+  "description": "点击日历选择，酒店入住-离开范围选择，往返模式，价格日历设置等，同时可以自定义主题色（兼容uniApp小程序）",
   "main": "Calendar.vue",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
