--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tanagang/vue-calendar.git"
+    "url": "https://github.com/tanagang/mobile-calendar-simple"
   },
   "keywords": [
     "mobile",
