--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mobile-calendar-simple",
   "version": "2.0.6",
-  "description": "点击日历选择，酒店入住-离开范围选择，往返模式，价格日历设置等，同时可以自定义主题色（兼容uniApp小程序）",
+  "description": "同程艺龙-多种模式日历插件,支持标准选择模式、酒店入住离开模式、飞机往返模式，可自定义主题色",
   "main": "Calendar.vue",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
